--- a/central limit theorem.Rmd
+++ b/central limit theorem.Rmd
@@ -2,7 +2,7 @@
 title: "Central Limit Theorem"
 author: "Amnist.O"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
@@ -40,9 +40,6 @@ df %>%
   column_to_rownames("spp") %>%
   t() %>%
   data.frame()
-  
-
-
 ```
 
 Consider a seed germination experiment, in which 15 out of 20 seeds have germinated.
