rearrange the files

--- a/assessment code/chi-squared.Rmd
+++ b/assessment code/chi-squared.Rmd
@@ -2,7 +2,7 @@
 title: "Chi-Squared test"
 author: "Amnist.O"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
