--- a/assessment code/1way anova.Rmd
+++ b/assessment code/1way anova.Rmd
@@ -2,7 +2,7 @@
 title: "1-way ANOVA"
 author: "Amnist.O"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
