--- a/assessment code/binomial proportion.Rmd
+++ b/assessment code/binomial proportion.Rmd
@@ -2,7 +2,7 @@
 title: "Binomial Proportions"
 author: "Amnist.O"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
