--- a/assessment code/t-test.Rmd
+++ b/assessment code/t-test.Rmd
@@ -2,7 +2,7 @@
 title: "t-test"
 author: "Amnist.O"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
