--- a/assessment code/linear regression.Rmd
+++ b/assessment code/linear regression.Rmd
@@ -14,7 +14,9 @@ A statistician has analysed correlation between height (cm) and weight (kg) and 
 
 It means\
 1. each cm of height increased is associated (not cause) with an average (since it is $\mathbb{E}(Y|X)$ ) 500 g increased in weight.
+
 2. expected weight of a 2 meters tall person is $-25 + 0.5 \times 200$ which is 75 kg.
+
 3. relationship between height and weight is approximately linear (according to this analysis)
 
 ## Assessment: Linearisation
@@ -44,4 +46,54 @@ What can Residuals vs Fitted plot tell you?
 
 [source](https://support.minitab.com/en-us/minitab/help-and-how-to/statistical-modeling/regression/how-to/fitted-line-plot/interpret-the-results/all-statistics-and-graphs/residual-plots/#residuals-versus-fits)
 
+## Assessment: Applying Linear Regression
+1. Load the dataset howell1.csv.
+2. Select only the people above 18 years of age.
+3. After a brief exploratory analysis, fit the regression model of weight vs. height for men and women separately.
+4. Check the assumptions.
+5. Produce plots of the fitted models.
+6. Interpret the coefficients.
 
+```{r load package, message=FALSE}
+library(tidyverse)
+```
+
+Exploratory analysis
+
+```{r load data}
+df <- read.csv("datasets/howell1.csv",sep=";")
+df %>%
+  filter(age >= 18) -> df
+```
+
+Regression based on sex
+```{r lm}
+m1 <- lm(weight ~ height, data = subset(df, male == 1))
+m2 <- update(m1, data = subset(df, male == 0))
+
+modelsummary::msummary(list(male = m1,female = m2))
+```
+
+Assumptions check
+```{r resid plot}
+par(mfrow = c(2,4))
+plot(m1)
+plot(m2)
+```
+
+Plot the fitted model
+```{r plot}
+plot(df$height,df$weight,
+     xlab = "Height (cm)",
+     ylab = "Weight (kg)",
+     pch =16)
+curve(m1$coefficients[1]+m1$coefficients[2]*x,
+      add = T,
+      col = "navyblue",lwd = 2)
+curve(m2$coefficients[1]+m2$coefficients[2]*x,
+      add=T, col = "plum", lwd = 2,lty=2)
+```
+
+Interpret the coefficients
+
+1 cm additional height is associated with average 615g increase in weight for male while the same additional height is associated with average 657g increase in weight for female.
